changed image size issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -419,7 +419,7 @@ h3 {
 
     .SkillsContent img {
         width: 3em;
-        height: 3em;
+        height: auto;
     }
 
     /* PROJECTS */
@@ -447,6 +447,6 @@ h3 {
     }
 
     .ContactSocial a img {
-        width: 1.25em;
+        width: 1em;
     }
 }
